--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <p class="frete">Frete grátis</p>
 
         <div class="produtos">
-            <img src="Img/1.png" alt="Teclado Gamer">
-            <img src="Img/2.png" alt="Mouse Gamer">
-            <img src="Img/3.png" alt="Headset Gamer">
+            <img src="1.png" alt="Teclado Gamer">
+            <img src="2.png" alt="Mouse Gamer">
+            <img src="3.png" alt="Headset Gamer">
         </div>
 
         <button id="comprar-btn">Comprar Agora</button>
